<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="city">City:</string>
    <string name="description">Description:</string>
    <string name="temperature">Temperature:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="temperature_min">Temperature Min:</string>
    <string name="temperature_max">Temperature Max:</string>
    <string name="wind_speed">Wind speed:</string>
    <string name="wind_deg">Wind deg:</string>
</resources>
